<resources>
    <string name="app_name">Task-Management-APP</string>
    <string name="no_data">No Data.</string>
    <string name="imageview">imageview</string>
    <string name="add">Add</string>
    <string name="task_prority">Task Prority</string>
    <string name="time">Time</string>
    <string name="task_title">Task Title</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>